Stats: Fixing spacing

--- a/client/my-sites/stats/stats-purchase/styles.scss
+++ b/client/my-sites/stats/stats-purchase/styles.scss
@@ -60,8 +60,6 @@
 	}
 
 	.stats-purchase-wizard__qualifications {
-		margin-bottom: 2rem;
-
 		li {
 			margin-bottom: 8px;
 		}
